# cosmoglint

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  README_PYPI.md  check_test.ipynb  create_data_cube.py  create_mock.py  power.py  pyproject.toml  requirements.txt  setup.py  sub_gen.sh  sub_test.sh  utils.py
Transformer/: main.py  model.py  norm_params.txt  plot.ipynb  sub.sh  sub_no_vel.sh  utils.py
Transformer/NF/: sub.sh
Transformer/NN/: main.py  plot.ipynb  sub.sh
Transformer_NF/: main.py  model.py  norm_params.txt  plot.ipynb  sub.sh  utils.py
cosmoglint/model/: __init__.py  base.py  transformer.py  transformer_nf.py
cosmoglint/utils/: __init__.py  (+5 more)
examples/: args_transformer.json  args_transformer_nf.json
lim_mock_generator/: check_test.ipynb  create_data_cube.py  create_mock.py  plot.ipynb
notebooks/: plot_data_cube.ipynb  plot_lightcone.ipynb  plot_mock.ipynb  plot_nf.ipynb  plot_nn.ipynb  plot_transformer.ipynb  plot_transformer_global_cond.ipynb  plot_transformer_nf.ipynb  plot_utils.py  power.py
scripts/: craete_data.py  create_data_cube.py  create_mock.py  job.sh  norm_params.txt  run_create.sh  run_create_global_cond.sh  run_create_with_original_value.sh  run_nf.sh  run_nn.sh  run_transformer.sh  run_transformer_global_cond.sh  run_transformer_multiple_input.sh  run_transformer_nf.sh  train_nf.py  train_nn.py  train_transformer.py  train_transformer_nf.py
scripts_lightcone/: create_lightcone.py  create_mock.py  lightcone_utils.py  line_model.py  model_config.json  plot_lightcone.ipynb  run_create_lightcone.sh  run_create_mock.sh
(+36 files in other folders)
